# thirdparty-fmod

./: CMakeLists.txt  README.md  init.cmake
linux/api/fsbank/lib/x64/: libfsbank.so.12
linux/api/fsbank/lib/x86_64/: libfsbank.so.13
linux/api/studio/lib/x64/: libfmodstudio.so.13
windows-uwp/api/core/lib/arm/: fmod.lib
windows-uwp/api/core/lib/x64/: fmod.lib
windows-uwp/api/core/lib/x86/: fmod.lib
windows-uwp/api/studio/lib/arm/: fmodstudio.lib
windows-uwp/api/studio/lib/x64/: fmodstudio.lib
windows-uwp/api/studio/lib/x86/: fmodstudio.lib
